update run code

--- a/.github/workflows/master_chatapplication.yml
+++ b/.github/workflows/master_chatapplication.yml
@@ -66,5 +66,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'ChatApplication'
-          slot-name: 'Production'
+#          slot-name: 'Production'
           
