update run code

--- a/.github/workflows/master_chatapplication.yml
+++ b/.github/workflows/master_chatapplication.yml
@@ -38,7 +38,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: .
+          path: |
+            website/
+            requirements.txt
 
 
   deploy:
