--- a/.github/workflows/master_chatapplication.yml
+++ b/.github/workflows/master_chatapplication.yml
@@ -30,8 +30,7 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies for deployment
-          run: |
-            source venv/bin/activate
+          run:
             pip install --upgrade pip
             pip install -r requirements.txt
         
