--- a/.github/workflows/master_chatapplication.yml
+++ b/.github/workflows/master_chatapplication.yml
@@ -30,7 +30,7 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies for deployment
-          run:
+          run: |
             pip install --upgrade pip
             pip install -r requirements.txt
         
