update run code

--- a/.github/workflows/master_chatapplication.yml
+++ b/.github/workflows/master_chatapplication.yml
@@ -73,6 +73,7 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'ChatApplication'
-          slot-name: 'Production'
-          package: '.'
+          images: 'chatapplication:latest'
+#          slot-name: 'Production'
+#          package: '.'
           
