update run code

--- a/.github/workflows/master_chatapplication.yml
+++ b/.github/workflows/master_chatapplication.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
+          pip install --force-reinstall eventlet==0.40.3
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
