--- a/.github/workflows/master_chatappicationv1.yml
+++ b/.github/workflows/master_chatappicationv1.yml
@@ -30,7 +30,10 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install --force-reinstall eventlet==0.40.3
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
