update run code

--- a/.github/workflows/master_chatappicationv1.yml
+++ b/.github/workflows/master_chatappicationv1.yml
@@ -24,10 +24,10 @@ jobs:
         with:
           python-version: '3.13'
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
+#      - name: Create and start virtual environment
+#        run: |
+#          python -m venv venv
+#          source venv/bin/activate
       
       - name: Install dependencies
         run: |
